# Binary-Cellular-Automata

./: .gitignore  CMakeLists.txt  Compile.bat  LICENSE  README.md  Run.bat
src/: DrawGrid.cpp  Grid.cpp  Grid.hpp  GridDebug.cpp  Logger.hpp  main.cpp
src/utility/: Timer.hpp
